[package]
name = "q-pkg-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive"] }
dirs = "6.0.0"
mlua = { version = "0.11.4", features = ["lua54", "serde", "vendored"] }
os_info = "3.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
